@@ -605,6 +605,8 @@ extern "C" {
 #define TB_SETINSERTMARKCOLOR	(WM_USER+88)
 #define TB_GETINSERTMARKCOLOR	(WM_USER+89)
 #define TB_MAPACCELERATORW	(WM_USER+90)
+#define TB_GETSTRINGW		(WM_USER+91)
+#define TB_GETSTRINGA		(WM_USER+92)
 #define TB_SETCOLORSCHEME	CCM_SETCOLORSCHEME
 #define TB_GETCOLORSCHEME	CCM_GETCOLORSCHEME
 #define TB_SETUNICODEFORMAT	CCM_SETUNICODEFORMAT
@@ -1596,6 +1598,10 @@ extern "C" {
 #define RBBS_HIDDEN 8
 #define RBBS_NOVERT 16
 #define RBBS_FIXEDBMP 32
+#if (_WIN32_IE >= 0x0501)
+#define RBBS_HIDETITLE 0x400
+#define RBBS_TOPALIGN 0x800
+#endif /* _WIN32_IE >= 0x0501 */
 #define RBBIM_STYLE 1
 #define RBBIM_COLORS 2
 #define RBBIM_TEXT 4
@@ -3231,6 +3237,7 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define TB_INSERTBUTTON TB_INSERTBUTTONW
 #define TB_ADDBUTTONS TB_ADDBUTTONSW
 #define TB_MAPACCELERATOR TB_MAPACCELERATORW
+#define TB_GETSTRING TB_GETSTRINGW
 #define TBBUTTONINFO TBBUTTONINFOW
 #define LPTBBUTTONINFO LPTBBUTTONINFOW
 #define TBN_GETDISPINFO TBN_GETDISPINFOW
@@ -3368,6 +3375,7 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define TB_INSERTBUTTON TB_INSERTBUTTONA
 #define TB_ADDBUTTONS TB_ADDBUTTONSA
 #define TB_MAPACCELERATOR TB_MAPACCELERATORA
+#define TB_GETSTRING TB_GETSTRINGA
 #define NMCOMBOBOXEX	NMCOMBOBOXEXA
 #define PNMCOMBOBOXEX	PNMCOMBOBOXEXA
 #define CBEN_DRAGBEGIN	CBEN_DRAGBEGINA
